# loop-agent-lite

./: .gitignore  README.md  dashboard.config.shared.json  dashboard.py  loop.py  prompt_templates.py  pyproject.toml  requirements.txt  status.py  work.py
docs/: README.md  parallel-tracks-plan.md  ralph-mode-design.md
engine/: __init__.py  cli.py  dashboard.config.shared.json  dashboard.py  fleet.py  loop.py  parallel.py  parallel_child.py  parallel_contract.py  parallel_gate.py  parallel_spool.py  parallel_state.py  parallel_worker.py  paths.py  platform_compat.py  prompt_templates.py  ralph.py  repo_executor.py  repo_owner.py  status.py  work.py
prompts/: exec.md  plan.md
scripts/: kill_method_lab.py
templates/: GUIDE.md  ejb-to-springboot.md  java-generic.md  jsp-to-react.md
tests/: __init__.py  authorized_worker_launcher.py  e2e_ralph_server.py  e2e_server.py  fleet_fake_agent.py  fleet_validate.py  parallel_child_harness.py  parallel_plan_handoff_race_harness.py  parallel_worker_harness.py  test_child_registration_projection.py  test_cli.py  test_cli_serial_stack.py  test_dry_run_harness.py  test_fleet.py  test_git_read_fence.py  test_guards.py  test_launcher_owner_boundary.py  test_loop_stack_mode.py  test_managed_block_timeout_e2e.py  test_managed_branch_tamper_e2e.py  test_managed_gate.py  test_managed_worker_e2e.py  test_managed_worker_guards.py  test_ordinary_owner_integration.py  test_parallel_child.py  test_parallel_contract.py  test_parallel_dashboard.py  test_parallel_gate_client.py  test_parallel_owner_integration.py  test_parallel_plan_schema.py  (+18 more)
(+182 files in other folders)
