[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-agent-lite"
version = "0.1.0"
description = "本機 Loop Dashboard 與 agent coordinator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
loop = "engine.cli:main"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.setuptools.package-data]
engine = [
  "dashboard.config.shared.json",
  "prompts/*.md",
  "ui/*.html",
  "ui/assets/*",
]
